Archive2/07/19d01f62066b1c/output
main.cpp: In function 'int main()':
main.cpp:12:5: error: expected unqualified-id before '->' token
  foo->fooFunction();
     ^
main.cpp: At global scope:
main.cpp:17:7: error: redefinition of 'class foo'
 class foo
       ^
main.cpp:2:7: error: previous definition of 'class foo'
 class foo
       ^
main.cpp:21:13: error: invalid type in declaration before ';' token
 } *fooObject;
             ^
main.cpp:21:13: error: conflicting declaration 'int* fooObject'
main.cpp:6:4: note: previous declaration as 'foo* fooObject'
 } *fooObject;
    ^
main.cpp: In function 'int main()':
main.cpp:24:5: error: redefinition of 'int main()'
 int main()
     ^
main.cpp:9:5: note: 'int main()' previously defined here
 int main()
     ^
main.cpp:26:15: error: expected initializer before '*' token
  foo fooObject* = 0;
               ^
main.cpp:27:5: error: expected unqualified-id before '->' token
  foo->fooFunction();
     ^
